add error prone picnic rules