@@ -1,9 +1,10 @@
 package org.skgif.doi.crossref.dto;
 
+import static java.util.Collections.singletonList;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Stream;
@@ -12,27 +13,26 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-class CrossrefDateTest {
+final class CrossrefDateTest {
 
-    @ParameterizedTest(name = "{0}")
     @MethodSource("toIsoDateCases")
+    @ParameterizedTest(name = "{0}")
     void toIsoDate_matchesExpected(String label, CrossrefDate date, String expected) {
         assertThat(date.toIsoDate()).isEqualTo(Optional.ofNullable(expected));
     }
 
     private static Stream<Arguments> toIsoDateCases() {
         return Stream.of(
-                Arguments.of("null dateParts is empty", new CrossrefDate(null), null),
-                Arguments.of("empty dateParts is empty", new CrossrefDate(List.of()), null),
-                Arguments.of("null inner parts list is empty",
-                        new CrossrefDate(Collections.singletonList(null)), null),
-                Arguments.of("empty inner parts list is empty", new CrossrefDate(List.of(List.of())), null),
-                Arguments.of("null year is empty", withParts(null, "5", "1"), null),
-                Arguments.of("year only", isoDate("2013"), "2013"),
-                Arguments.of("year and month", isoDate("2013-08"), "2013-08"),
-                Arguments.of("year month and day", isoDate("2013-08-01"), "2013-08-01"),
-                Arguments.of("null month stops before day even when day is present",
-                        withParts("2013", null, "1"), "2013"));
+                arguments("null dateParts is empty", new CrossrefDate(null), null),
+                arguments("empty dateParts is empty", new CrossrefDate(List.of()), null),
+                arguments("null inner parts list is empty", new CrossrefDate(singletonList(null)), null),
+                arguments("empty inner parts list is empty", new CrossrefDate(List.of(List.of())), null),
+                arguments("null year is empty", withParts(null, "5", "1"), null),
+                arguments("year only", isoDate("2013"), "2013"),
+                arguments("year and month", isoDate("2013-08"), "2013-08"),
+                arguments("year month and day", isoDate("2013-08-01"), "2013-08-01"),
+                arguments("null month stops before day even when day is present", withParts("2013", null, "1"),
+                        "2013"));
     }
 
     // Mirrors CrossrefGrantMapperTest's isoDate helper: parts come from a parsed string literal
